# static-web-server

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp
benchmark/nginx/: ab_nginx.txt  ab_nginx_16.txt  ab_nginx_2.txt  ab_nginx_4.txt  ab_nginx_8.txt  nginx.conf  wrk_nginx.txt
benchmark/server/: ab_benchmark.txt  ab_benchmark_16.txt  ab_benchmark_2.txt  ab_benchmark_4.txt  ab_benchmark_8.txt  config.conf  wrk_benchmark.txt
include/: config.h  http_response.h  logger.h  server_socket.h  webserver.h  worker.h
src/: config.cpp  http_response.cpp  server_socket.cpp  webserver.cpp  worker.cpp
